# sigil

./: .editorconfig  .gitignore  .goreleaser.yaml  .rumdl.toml  .yamlfmt  AGENT.md  CLAUDE.md  Dockerfile  LICENSE_HEADER  NOTICE  Taskfile.yaml  buf.gen.yaml  buf.yaml  cog.toml  dprint.json  go.mod  go.sum  lefthook.yaml  manifest  sigil.yaml.example
.beads/: .gitignore  config.yaml  metadata.json
.beads/hooks/: commit-msg
.claude/: settings.json
.claude/commands/: sigil-design-review.md  sigil-lint-fix.md  sigil-new-plugin.md  sigil-security-check.md  sigil-test.md
.claude/hooks/: enforce-dev-practices.sh  pre-compact.sh  protect-generated-files.sh  session-end.sh  session-start.sh
api/openapi/: spec.json
cmd/openapi-gen/: main.go  main_test.go
cmd/sigil/: chat.go  chat_test.go  client.go  commands_test.go  doctor.go  doctor_test.go  init.go  init_test.go  list_commands_test.go  main.go  plugin.go  root.go  root_test.go  secret.go  secret_test.go  session.go  start.go  start_test.go  status.go  version.go  wire.go  wire_test.go  workspace.go
docs/decisions/: 2026-02-09-brainstorm-transcript.md  decision-log.md  pre-release-checklist.md
docs/design/: 00-overview.md  01-core-architecture.md  02-plugin-system.md  03-security-model.md  04-channel-system.md  05-workspace-system.md  06-node-system.md  07-provider-system.md  08-agent-core.md  09-ui-and-cli.md  10-build-and-distribution.md  11-storage-interfaces.md
docs/plans/: 00-master-plan.md  01-phase-1-foundation.md  02-phase-2-core-runtime.md  03-phase-3-agent-core.md  04-phase-4-platform-integration.md  05-phase-5-server-api.md  06-phase-6-advanced-features.md  07-phase-7-ui-distribution.md  2026-02-11-wasm-timeout-design.md  2026-02-17-agent-loop-security-pipeline-design.md  2026-02-17-agent-loop-security-pipeline.md  2026-02-21-cgo-elimination-design.md  2026-02-21-cgo-elimination.md  2026-02-21-chat-rate-limiting-design.md  2026-02-21-chat-rate-limiting-implementation.md  phase6-context-reset-handoff.md
docs/reviews/: phase2-pass2-summary.md  phase2-pass2-task7-sandbox-config.md  phase2-pass2-task8-wasm-host.md  phase2-review-summary.md  phase2-task1-capability-model.md  phase2-task2-security-enforcer.md  phase2-task3-plugin-manifest.md  phase2-task4-lifecycle-sm.md  phase2-task5-plugin-manager.md  phase2-task7-sandbox-config.md  phase2-task8-wasm-host.md
docs/testing/: sse-race-tests.md
internal/agent/: audit.go  compaction.go  compaction_integration_test.go  compaction_lifecycle_test.go  compaction_test.go  (+18 more)
site/: .gitignore  pyproject.toml  zensical.toml
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
ui/src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: health_check_test.md  main.rs
(+218 files in other folders)
