# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Sigil Contributors

[package]
name = "sigil"
version = "0.1.0"
description = "Sigil Desktop App"
authors = ["Sigil Contributors"]
license = "Apache-2.0"
repository = "https://github.com/sigil-dev/sigil"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "shell-sidecar"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
